# auto-add-buddy

./: README.md  auto_add_buddy.py  get_blog_id.py  pyproject.toml
