[project]
name = "auto-add-buddy"
version = "0.1.0"
description = ""
authors = [
    {name = "knu9910",email = "knu9910@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "playwright (>=1.49.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
